fixed alignement

--- a/style/overlay.css
+++ b/style/overlay.css
@@ -20,7 +20,6 @@
   color: black;
   width: 45%;
   text-align: justify;
-  white-space: normal;
   margin: 40px auto;
   background-image: url(../img/txtbg.png);
   -webkit-border-radius:12px;
